--- a/Java_HandsOn/React JS/Task_1/index.html
+++ b/Java_HandsOn/React JS/Task_1/index.html
@@ -1,1 +1,13 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Divisibility by 13 Checker</title>
+</head>
+<body>
+  <div id="root1"></div>
+  <script src="index.js"></script>
+</body>
+</html>
