--- a/Bootstrap/Task_1.html
+++ b/Bootstrap/Task_1.html
@@ -1,1 +1,96 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap Responsive Webpage</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
 
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">ENTERPRISE INC.</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <header class="bg-dark text-white text-center p-5">
+        <h1>HELLO! YOU ARE HERE</h1>
+        <p>Welcome to a modern and flexible website layout.</p>
+    </header>
+
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="p-3 border text-center shadow-sm">
+                    <h4>Strict Deadlines</h4>
+                    <p>We ensure timely delivery with efficiency.</p>
+                    <button class="btn btn-dark">Read More</button>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="p-3 border text-center shadow-sm">
+                    <h4>Best Pricing</h4>
+                    <p>Affordable and competitive pricing options.</p>
+                    <button class="btn btn-dark">Read More</button>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="p-3 border text-center shadow-sm">
+                    <h4>High Quality</h4>
+                    <p>We deliver top-notch quality in our services.</p>
+                    <button class="btn btn-dark">Read More</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="p-3 border text-center shadow-sm">
+                    <img src="https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?w=300&h=200" class="img-fluid rounded" alt="Recent Work 1">
+
+                    <h5>Recent Work 1</h5>
+                    <p>Sample description for the recent project.</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="p-3 border text-center shadow-sm">
+                    <img src="https://images.unsplash.com/photo-1494173853739-c21f58b16055?w=300&h=200" class="img-fluid rounded" alt="Recent Work 2">
+                    <h5>Recent Work 2</h5>
+                    <p>Sample description for the recent project.</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <div class="p-3 border text-center shadow-sm">
+                    <img src="https://images.unsplash.com/photo-1472289065668-ce650ac443d2?w=300&h=200" class="img-fluid rounded" alt="Recent Work 3">
+
+                    <h5>Recent Work 3</h5>
+                    <p>Sample description for the recent project.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2025 ENTERPRISE INC. | All Rights Reserved</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
