--- a/Task4_Weekend/about.html
+++ b/Task4_Weekend/about.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InnovateX - Tech Conference</title>
-    
+    <title>About - InnovateX</title>
+   
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-
+  
     <link rel="stylesheet" href="css/style.css">
- 
-    <script defer src="js/timer.js"></script>
 </head>
 <body>
 
@@ -22,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
                     <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -31,36 +29,17 @@
         </div>
     </nav>
 
-    <header class="text-white text-center py-5 bg-primary">
-        <div class="container">
-            <h1>Welcome to InnovateX 2025</h1>
-            <p class="lead">The premier tech conference bringing together innovators and experts.</p>
-        </div>
-    </header>
-
-   
+ 
     <section class="container my-5">
-        <div class="row">
-            <div class="col-md-6">
-                <h2>About InnovateX</h2>
-                <p>
-                    InnovateX is an annual tech conference that brings together industry leaders, 
-                    developers, and enthusiasts to discuss the latest trends in technology, 
-                    cybersecurity, artificial intelligence, and more.
-                </p>
-            </div>
-            <div class="col-md-6">
-                <img src="tech-conference.jpeg" class="img-fluid rounded" alt="Tech Conference">
-            </div>
-        </div>
+        <h2>About InnovateX</h2>
+        <p>
+            InnovateX is an annual tech conference that brings together industry leaders, developers, and enthusiasts to discuss the latest trends in technology, cybersecurity, AI, and more. Join us for insightful sessions, networking opportunities, and hands-on workshops.
+        </p>
     </section>
-
 
     <footer class="bg-dark text-white text-center py-3 mt-5">
         <p>&copy; 2025 InnovateX Conference | All Rights Reserved</p>
     </footer>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
