--- a/Task4_Weekend/contact.html
+++ b/Task4_Weekend/contact.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InnovateX - Tech Conference</title>
+    <title>Contact - InnovateX</title>
     
+  
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="css/style.css">
- 
-    <script defer src="js/timer.js"></script>
+
+    <script defer src="js/script.js"></script>
 </head>
 <body>
+
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
@@ -25,42 +27,34 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
                     <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <header class="text-white text-center py-5 bg-primary">
-        <div class="container">
-            <h1>Welcome to InnovateX 2025</h1>
-            <p class="lead">The premier tech conference bringing together innovators and experts.</p>
-        </div>
-    </header>
-
-   
     <section class="container my-5">
-        <div class="row">
-            <div class="col-md-6">
-                <h2>About InnovateX</h2>
-                <p>
-                    InnovateX is an annual tech conference that brings together industry leaders, 
-                    developers, and enthusiasts to discuss the latest trends in technology, 
-                    cybersecurity, artificial intelligence, and more.
-                </p>
+        <h2>Contact Us</h2>
+        <form id="contact-form">
+            <div class="mb-3">
+                <label for="name" class="form-label">Name:</label>
+                <input type="text" class="form-control" id="name" required>
             </div>
-            <div class="col-md-6">
-                <img src="tech-conference.jpeg" class="img-fluid rounded" alt="Tech Conference">
+            <div class="mb-3">
+                <label for="email" class="form-label">Email:</label>
+                <input type="email" class="form-control" id="email" required>
             </div>
-        </div>
+            <div class="mb-3">
+                <label for="message" class="form-label">Message:</label>
+                <textarea class="form-control" id="message" rows="4" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Send</button>
+        </form>
     </section>
-
 
     <footer class="bg-dark text-white text-center py-3 mt-5">
         <p>&copy; 2025 InnovateX Conference | All Rights Reserved</p>
     </footer>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
