--- a/Task4_Weekend/schedule.html
+++ b/Task4_Weekend/schedule.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schedule - InnovateX</title>
     
- 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    
     <link rel="stylesheet" href="css/style.css">
 
     <script defer src="js/schedule.js"></script>
@@ -21,8 +19,10 @@
     </nav>
 
     <section class="container my-5">
-        <h2>Event Schedule</h2>
-        <div id="schedule-list"></div>
+        <h2 class="text-center mb-4">Event Schedule</h2>
+        <div id="schedule-list" class="row">
+            <!-- Schedule items will be inserted here dynamically by schedule.js -->
+        </div>
     </section>
 
     <footer class="bg-dark text-white text-center py-3 mt-5">
