--- a/Task4_Weekend/speakers.html
+++ b/Task4_Weekend/speakers.html
@@ -1,2 +1,33 @@
-<section id="speakers-list"></section>
-<script src="js/speakers.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Speakers - InnovateX</title>
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
+    <script defer src="js/speakers.js"></script>
+</head>
+<body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">InnovateX</a>
+        </div>
+    </nav>
+
+    <section class="container my-5">
+        <h2 class="text-center mb-4">Meet Our Speakers</h2>
+        <div id="speakers-list" class="row">
+            <!-- Speakers will be dynamically loaded here -->
+        </div>
+    </section>
+
+    <footer class="bg-dark text-white text-center py-3 mt-5">
+        <p>&copy; 2025 InnovateX Conference | All Rights Reserved</p>
+    </footer>
+
+</body>
+</html>
